Added Preservative Governor

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -293,6 +293,20 @@ config CPU_FREQ_DEFAULT_GOV_SLIM
 	help
 	Use the CPUFreq governor 'slim' as default.
 
+config CPU_FREQ_DEFAULT_GOV_OPTIMAX
+ 	bool "optimax"
+ 	select CPU_FREQ_GOV_OPTIMAX
+ 	select CPU_FREQ_GOV_PERFORMANCE
+ 	help
+ 	  Use the CPUFreq governor 'optimax' as default
+	 
+config CPU_FREQ_DEFAULT_GOV_PRESERVATIVE
+	bool "preservative"
+	select CPU_FREQ_GOV_PRESERVATIVE
+	select CPU_FREQ_GOV_PERFORMANCE
+	help
+	 Use the CPUFreq governor 'preservative' as default.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -585,6 +599,14 @@ config CPU_FREQ_GOV_INTERACTIVE_PRO
 
 config CPU_FREQ_GOV_SLIM
 	tristate "'slim' cpufreq governor"
+	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_OPTIMAX
+	tristate "'optimax' cpufreq policy governor"
+	depends on CPU_FREQ
+	  
+config CPU_FREQ_GOV_PRESERVATIVE
+	tristate "'preservative' cpufreq governor"
 	depends on CPU_FREQ
 
 config CPU_BOOST
