Added mythx_plug CPU governor

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -307,6 +307,11 @@ config CPU_FREQ_DEFAULT_GOV_PRESERVATIVE
 	help
 	 Use the CPUFreq governor 'preservative' as default.
 
+config CPU_FREQ_DEFAULT_GOV_MYTHX_PLUG
+	bool "mythx_plug"
+	select CPU_FREQ_GOV_MYTHX_PLUG
+	help
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -607,6 +612,10 @@ config CPU_FREQ_GOV_OPTIMAX
 	  
 config CPU_FREQ_GOV_PRESERVATIVE
 	tristate "'preservative' cpufreq governor"
+	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_MYTHX_PLUG
+	tristate "'mythx_plug' cpufreq governor"
 	depends on CPU_FREQ
 
 config CPU_BOOST
