--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -188,12 +188,6 @@ config CPU_FREQ_DEFAULT_GOV_LULZACTIVEQ
 	help
 	Use the CPUFreq governor 'lulzactiveq' as default.
 
-config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
-	bool "zzmoove"
-	select CPU_FREQ_GOV_ZZMOOVE
-	help
-	Use the CPUFreq governor 'zzmoove' as default.
-
 config CPU_FREQ_DEFAULT_GOV_ABYSSPLUGV2
         bool "abyssplugv2"
         select CPU_FREQ_GOV_ABYSSPLUGV2
@@ -334,6 +328,15 @@ config CPU_FREQ_DEFAULT_GOV_WAVE
 	bool "wave"
 	select CPU_FREQ_GOV_WAVE
 	help
+
+config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
+	  bool "zzmoove"
+	  select CPU_FREQ_GOV_ZZMOOVE
+	  select CPU_FREQ_GOV_PERFORMANCE
+	  help
+	  Use the CPUFreq governor 'zzmoove' as default, using predefined
+	  frequency lookup tables and optimized scaling triggers instead of
+	  % frequency steps to get smooth up/downscaling dependant on CPU load.
 
 endchoice
 
@@ -508,10 +511,6 @@ config CPU_FREQ_GOV_LULZACTIVEQ
 	   tristate "'lulzactiveq' cpufreq governor"
 	   depends on CPU_FREQ
 
-config CPU_FREQ_GOV_ZZMOOVE
-	   tristate "'zzmoove' cpufreq governor"
-	   depends on CPU_FREQ
-
 config CPU_FREQ_GOV_ABYSSPLUGV2
         tristate "'abyssplugv2' cpufreq governor"
         depends on CPU_FREQ && NO_HZ && HOTPLUG_CPU
@@ -668,6 +667,15 @@ config CPU_FREQ_GOV_HYPER
 config CPU_FREQ_GOV_WAVE
 	tristate "'wave' cpufreq governor"
 	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_ZZMOOVE
+	tristate "'zzmoove' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'zzmoove' - based on cpufreq_conservative, using predefined
+	  frequency lookup tables and optimized scaling triggers instead of
+	  % frequency steps to get smooth up/downscaling dependant on CPU load.
+	  If in doubt, say N.
 
 config CPU_BOOST
 	tristate "Event base short term CPU freq boost"
